--- a/src/routes/login/login.css
+++ b/src/routes/login/login.css
@@ -23,17 +23,24 @@
 }
 .content {
   position: absolute;
-  top: 50%;
+  top: -100%; 
   left: 50%;
   z-index: 999;
   text-align: center;
-  padding: 40px; 
+  padding: 40px;
   width: 370px;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
   background: rgba(255, 255, 255, 0.04);
   box-shadow: -1px 4px 28px 0px rgba(0, 0, 0, 0.75);
-  border-radius: 15px; 
-  border: 0.5px solid rgba(255, 255, 255, 0.04); 
+  border-radius: 15px;
+  opacity: 0; 
+  transition: all 0.8s ease-in-out; 
+}
+
+.content.active {
+  top: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 1;
 }
 
 .content header{
