feat(change): we ayudame con esta mierda

--- a/src/routes/login/login.css
+++ b/src/routes/login/login.css
@@ -153,4 +153,10 @@ i span{
     object-fit: cover; 
     margin-bottom: 20px; 
   }
-  
+
+  body{
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    height: 100vh;
+  }
