--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -1,4 +1,3 @@
-
 #dynamic-background {
     position: fixed;
     top: 0;
@@ -16,8 +15,7 @@
 
 * {
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    padding: 0px;
 }
 
 body {
@@ -27,71 +25,6 @@ body {
     line-height: 1.6;
 }
 
-
-.sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 6rem; 
-    height: 100vh; 
-    background-color: #1E1E1E;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 3vh 0;
-    z-index: 1000;
-    box-shadow: 0.2rem 0 0.5rem rgba(0, 0, 0, 0.3);
-}
-
-
-.sidebar .logo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 2vh;
-}
-
-.sidebar .logo img {
-    width: 4rem;
-    height: auto;
-    border-radius: 50%;
-    margin-bottom: 0.5rem;
-}
-
-.sidebar .logo-text {
-    color: #fff;
-    font-size: 1rem;
-    font-weight: bold;
-    text-align: center;
-}
-
-
-.nav-icons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 3vh;
-}
-
-.nav-icons button {
-    background: none;
-    border: none;
-    color: #aaa;
-    font-size: 1.8rem;
-    cursor: pointer;
-    transition: color 0.3s ease, transform 0.3s ease;
-}
-
-.nav-icons button:hover {
-    color: #d4c70e;
-    transform: scale(1.2);
-}
-
-.nav-icons button:focus {
-    outline: none;
-}
 
 
 main {
@@ -141,39 +74,4 @@ main {
 .feature p {
     font-size: 1.4rem;
     color: #BBBBBB;
-}
-
-
-button {
-    background-color: #d4c70e;
-    color: #FFFFFF;
-    border: none;
-    border-radius: 50%;
-    padding: 1vh 2vw;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background-color 0.3 ease;
-}
-
-button.hover {
-    background-color: #696304;
-}
-
-
-.nav-buttons button {
-    background-color: transparent;
-    color: white;
-    border: none;
-    font-size: 2rem;
-    cursor: pointer;
-    transition: transform 0.3s ease, color 0.3 ease;
-}
-
-.nav-buttons button:hover {
-    color: #d4c70e;
-    transform: scale(1.2);
-}
-
-.nav-buttons button:focus {
-    outline: none;
 }
