--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -44,6 +44,13 @@ body {
     box-shadow: 0.2rem 0 0.5rem rgba(0, 0, 0, 0.3);
 }
 
+.sidebar .nav-icons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3vh;
+
+}
 
 .sidebar .logo {
     display: flex;
@@ -79,7 +86,7 @@ body {
     background: none;
     border: none;
     color: #aaa;
-    font-size: 1.8rem;
+    font-size: 2.5rem;
     cursor: pointer;
     transition: color 0.3s ease, transform 0.3s ease;
 }
@@ -112,22 +119,25 @@ main {
     width: calc(100% - 6rem); 
 }
 
+.feature:hover {
+    transform: scale(1.1);
+}
+
 .feature {
     background: rgba(34, 34, 34, 0.8);
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 3vh;
     border-radius: 1rem;
     box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.1);
     text-align: center;
-    width: 20vw;
-    height: auto;
-}
+    width: 10vw; 
+    height: 10vw;
+    transition: transform 0.3s ease;
 
 .feature i {
-    font-size: 2.5rem;
+    font-size: 4rem;
     color: #d4c70e;
     margin-bottom: 1vh;
 }
