--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -12,6 +12,33 @@ body {
     background: linear-gradient(#F1FAFF, #CBE4FF);
 }
 
+.logo {
+    height: 3rem;
+    width: 3rem;
+    background-color: rgb(255, 221, 0);
+    border-radius: 12px;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url(https://clipart-library.com/images/pT5oRXy6c.png);
+}
+
+.logoText1 {
+    text-align: left;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: white;
+    display: inline-flex;
+}
+
+.logoText2 {
+    text-align: left;
+    font-size: 0.5rem;
+    font-weight: 600;
+    color: rgb(135, 135, 135);
+}
+
+
 .sidebar {
     position: fixed;
     width: 270px;
